kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  parentRefs:
    - name: cilium-ingress
      namespace: ingress
  hostnames: ["hubble.${DOMAIN}"]
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
          weight: 1
